# example-adapter-rust

./: Cargo.toml  README.md  manifest.json
.github/workflows/: release.yml
src/: adapter.rs  clear_action.rs  config.rs  device.rs  main.rs  property.rs  random_event.rs  random_property.rs  set_action.rs  value_event.rs
